<package>
  <name>easy_markers</name>
  <version>0.2.4</version>
  <description>Python library to assist in publishing markers easily</description>
  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/easy_markers</url>
  <!-- <url type="bugtracker"></url> -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>roslib</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
