<package>
  <name>kalman_filter</name>
  <version>0.2.4</version>
  <description>Simple Kalman Filter in Python</description>
  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kalman_filter</url>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
