<package>
  <name>manifest_cleaner</name>
  <version>0.2.4</version>
  <description>Examines package and stack manifests. Currently only can output statistics, doesn't actually clean.</description>
  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/manifest_cleaner</url>
  <!-- <url type="bugtracker"></url> -->
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
